# rumen-tsvetkov-employees

./: README.md  pyproject.toml  requirements.txt
employee/: app.py  common.py  const.py  employees.py  validate.py
employee/templates/: base.html  employee.html  files.html  head.html  index.html  longest_period_pair.html  navbar.html  project.html  upload.html
employee/uploads/: input.csv
