[tool.poetry]
name = "employee"
version = "0.1.0"
description = "Pair of employees who have worked together"
authors = ["Rumen Tsvetkov <rtsvetkov@keemail.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
